# substrate-node-template

./: .gitignore  Cargo.toml  Containerfile  README.md  clean-node.sh  gen-chainSpec.sh  localSpec.json  start-alice.sh  start-bob.sh  start-dev.sh
.github/workflows/: check.yml  release.yml
circom/: justfile  private-input.json  task.circom
node/src/: chain_spec.rs
pallets/collectibles/src/: lib.rs
pallets/pallet-randomness-collective-flip/: Cargo.toml
pallets/pallet-randomness-collective-flip/src/: lib.rs
pallets/scbc/: Cargo.toml
pallets/scbc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
