[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.6.1"

[dependencies.frame-support]
default-features = false
version = "4.0.0-dev"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"

[dependencies.frame-system]
default-features = false
version = "4.0.0-dev"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"

[dependencies.safe-mix]
default-features = false
version = "1.0"

[dependencies.scale-info]
default-features = false
features = ["derive"]
version = "2.5.0"

[dependencies.sp-runtime]
default-features = false
version = "24.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"

[dependencies.sp-std]
default-features = false
version = "8.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"

[dev-dependencies.sp-core]
version = "21.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"

[dev-dependencies.sp-io]
version = "23.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"

[features]
default = ["std"]
std = ["codec/std", "frame-support/std", "frame-system/std", "safe-mix/std", "scale-info/std", "sp-runtime/std", "sp-std/std"]
try-runtime = ["frame-support/try-runtime"]

[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME randomness collective flip pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-randomness-collective-flip"
repository = "https://github.com/paritytech/substrate/"
version = "15.0.0"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]